avoid blurring view effect

--- a/tomatic/static/components/callinfo_style.styl
+++ b/tomatic/static/components/callinfo_style.styl
@@ -327,6 +327,10 @@
         .center
             text-align: center
             margin-top: 10px
+        .pe-list-tile
+            position: static
+            .pe-list-tile__primary
+               position: static
 
     .all-info
         display: inline-block
